= RubyMotion 2.16 =

  * Improve Time#{<, >, ==, eql?} performance. 9 times faster.
  * Improve the performance where NSDate object is converted to Time object.
    10 times faster.

= RubyMotion 2.15 =

  * Added support for Xcode 5.1 Developer Preview and iOS 7.1 Beta.
  * Improved REPL to recognize Simulator at any scale and orientation. The only
    unsupported variant at this time is a Simulator window with scroll bars.
  * Fixed REPL<->Simulator coordinate translation when run on a Retina Mac.
  * Fixed undefined behaviour in REPL such as local variables not being stored.
  * Improved dispatching of shortcut methods (ex foo= is shortcut of setFoo:).
    20 times faster.
  * Improved the performance where Fixnum and Float are returned. 20% faster.
  * Improved Array#concat performance. About 2 times faster.
  * Improved Array#reverse performance. 2 times faster.
  * Improved Array#reverse! performance. 8 times faster.
  * Improved Array#rotate performance. 5 times faster.
  * Improved Array#rotate! performance. 40 times faster.
  * Improved iterators performance (ex Array#{each, map}). 2-3 times faster.
  * Fixed a bug where Array#rotate! causes a crash in REPL.
  * Fixed a bug where the objects created by "CFxxxCreate(args)" are not
    released.
  * Fixed a bug in dispatcher where #super cannot look up the shortcut method.
    (ie #foo=)
  * Improve the precision of Float value.
  * Raise error if cleaning a build artefact fails.
  * [iOS] Fixed and optimized remote debugging (`rake device debug=1').
  * [iOS] Fixed a bug where `rake device' would no longer print the application
    logs from the device.
  * [OSX] Fixed a bug on OSX platform where compiler flags for iOS are passed
    when it generates bridgesupport file for vendor library.
  * [OSX] Added missing bridgesupport metadata for Carbon, OSServices and
    ApplicationServices frameworks.
  * [iOS] Deprecated optional block that can be passed to the `tests` method